Overflow bug is bigger

--- a/css.css
+++ b/css.css
@@ -71,7 +71,7 @@ main{
     font-size: 20px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     letter-spacing: 1px;
-    overflow: auto;
+    width:100%;
     text-align: center;
 }
 /* [main table] */
